k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amarshop
  labels:
    name: amarshop
    environment: production
    managed-by: argocd
